gardener/configuration/templates/netpol-allow-all-garden-cert-management.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-garden-cert-management
  namespace: garden
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: garden-cert-management
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
