gardener/configuration/templates/netpol-allow-all-garden-etcd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-garden-etcd
  namespace: garden
spec:
  podSelector:
    matchLabels:
      component: etcd
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
  - Ingress
  - Egress
