gardener/configuration/templates/netpol-allow-all-garden-gardener-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-garden-gardener-dashboard
  namespace: garden
spec:
  egress:
    - {}
  ingress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gardener-dashboard
  policyTypes:
    - Ingress
    - Egress
